# mailmap-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  commitlint.config.js  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mailmap_checker/: checker.py  cli.py  fixer.py  git.py  models.py  normalizer.py  parser.py
tests/: conftest.py  test_checker.py  test_cli.py  test_fixer.py  test_git.py  test_models.py  test_normalizer.py  test_parser.py
